kubernetes/apps/vault/vault/app/unsealer.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/apps/deployment_v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault-unsealer
  namespace: vault
  labels:
    app.kubernetes.io/component: unsealer
  annotations:
    secret.reloader.stakater.com/reload: vault-unseal-keys
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: unsealer
  template:
    metadata:
      labels:
        app.kubernetes.io/component: unsealer
    spec:
      containers:
        - name: unsealer
          image: docker.io/hashicorp/vault:2.0.3
          command:
            - /bin/sh
            - -ec
            - |
              [...]
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 64Mi
          volumeMounts:
            - name: snapshots
              mountPath: /snapshots
              readOnly: true
      volumes:
        - name: snapshots
          nfs:
            server: 10.100.0.81
            path: /safe/apps/vault
            readOnly: true
